<?xml version="1.0"?>
<package format="3">
  <name>replanners_managers_lib</name>
  <version>0.0.0</version>
  <description>The replanners_managers_lib package</description>

  <maintainer email="riemann@todo.todo">riemann</maintainer>

  <license>TODO</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == ''">cmake</buildtool_depend>
  
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>graph_display</depend>
  <depend>cnr_scene_manager_msgs</depend>
  <depend>moveit_collision_checker</depend>
  <depend>subscription_notifier</depend>
  <depend>jsk_rviz_plugins</depend>

  <depend>replanners_lib</depend>
  <depend>trajectories_processors_lib</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == ''">cmake</build_type>
  </export>
</package>
